# releasetool

./: .gitignore  .trampolinerc  CHANGELOG.md  MANIFEST.in  README.md  nox.py  noxfile.py  pyproject.toml  pytest.ini  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  setup.py
.github/: CODEOWNERS  release-trigger.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.kokoro/: build.sh  common.cfg  populate-release-secrets.sh  populate-secrets.sh  release.cfg  release.sh  requirements.in  requirements.txt  trampoline.sh  trampoline_release.sh  trampoline_v2.sh
.kokoro-autorelease/: build.sh  common.cfg  tag.cfg  tag.sh  trigger.cfg  trigger.sh
.kokoro/release/: common.cfg  release.cfg
autorelease/: __main__.py  common.py  github.py  kokoro.py  report.xml.j2  reporter.py  tag.py  trigger.py
protos/: kokoro_api.proto  kokoro_api_pb2.py
releasetool/: __init__.py  __main__.py  circleci.py  filehelpers.py  git.py  github.py  main.py  secrets.py  update_check.py
releasetool/commands/: common.py  magictoken.py  publish_reporter.py  publish_reporter.sh
releasetool/commands/start/: go.py  java.py  nodejs.py  python.py  python_tool.py  ruby.py
releasetool/commands/tag/: cpp.py  dotnet.py  go.py  java.py  nodejs.py  php.py  python.py  python_tool.py  ruby.py
testing/: constraints-3.6.txt  constraints-3.7.txt  constraints-3.8.txt
tests/: common_test.py  test_autorelease_tag.py  test_autorelease_trigger.py  test_github.py  test_publish_reporter.py
tests/commands/start/: test_python.py  test_ruby.py
tests/testdata/: fake-private-key.pem
(+12 files in other folders)
